[ADD] Initial CSS for Genre and Close Button for complete registration modal

--- a/Readiculous.WebApp/Views/BookMaster/BookEditModal.cshtml
+++ b/Readiculous.WebApp/Views/BookMaster/BookEditModal.cshtml
@@ -116,22 +116,4 @@
     </div>
 </form>
 
-<script>
-    document.getElementById('CoverImage').addEventListener('change', function(event) {
-        const previewContainer = document.getElementById('imagePreviewContainer');
-        const preview = document.getElementById('imagePreview');
-
-        if (this.files && this.files[0]) {
-            const reader = new FileReader();
-
-            reader.onload = function(e) {
-                preview.src = e.target.result;
-                previewContainer.classList.remove('d-none');
-            }
-
-            reader.readAsDataURL(this.files[0]);
-        } else {
-            previewContainer.classList.add('d-none');
-        }
-    });
-</script>
+<script src="~/js/adminBookMaster/bookmasterModal.js" asp-append-version="true"></script>
