--- a/Readiculous.WebApp/Views/UserMaster/UserAddModal.cshtml
+++ b/Readiculous.WebApp/Views/UserMaster/UserAddModal.cshtml
@@ -24,22 +24,14 @@
 
     <div class="form-group">
         <label asp-for="Password" class="form-label">Password</label>
-        <div class="password-input-group">
-            <input asp-for="Password"
-                   class="form-control"
-                   type="password"
-                   autocomplete="new-password"
-                   placeholder="System Generated Password"
-                   id="addPassword" />
-            <button type="button"
-                    class="password-toggle"
-                    onclick="togglePassword('addPassword', this)"
-                    aria-label="Toggle password visibility"
-                    aria-pressed="false">
-                <i class="fas fa-eye-slash"></i>
-            </button>
-        </div>
-        <span asp-validation-for="Password" class="text-danger"></span>
+        <input asp-for="Password"
+               class="form-control"
+               type="text"
+               value="System Generated Password"
+               placeholder="System Generated Password"
+               id="addPassword"
+               disabled />
+        <small class="form-text text-muted">A temporary password will be sent to the user’s email address.</small>
     </div>
 
     <div class="form-group">
