--- a/Readiculous.WebApp/Views/GenreMaster/GenreViewPage.cshtml
+++ b/Readiculous.WebApp/Views/GenreMaster/GenreViewPage.cshtml
@@ -6,7 +6,7 @@
 }
 
 @section Styles {
-    <link rel="stylesheet" href="~/css/genre-master-view.css" />
+    <link rel="stylesheet" href="~/css/adminGenreMaster/genre-master-view.css" />
 }
 
 <div class="genre-view-container">
