[FIX] Genre Add Button

--- a/Readiculous.WebApp/Views/GenreMaster/GenreMasterScreen.cshtml
+++ b/Readiculous.WebApp/Views/GenreMaster/GenreMasterScreen.cshtml
@@ -15,7 +15,7 @@
             <h1 class="genre-management-title mb-0">Genre Management</h1>
         </div>
         <div class="col-md-6 px-0 text-md-end">
-            <button type="button" class="btn btn-success" data-bs-toggle="modal" data-bs-target="#addGenreModal">
+            <button type="button" class="btn btn-success" id="openAddGenreModalBtn">
                 <i class="fas fa-plus me-2"></i>Add Genre
             </button>
         </div>
