--- a/Readiculous.WebApp/Views/Shared/_Layout.cshtml
+++ b/Readiculous.WebApp/Views/Shared/_Layout.cshtml
@@ -88,7 +88,6 @@
         </main>
         <partial name="_Footer" />
     </div>
-
     <div class="modal fade" id="registrationModal" tabindex="-1" aria-hidden="true">
         <div class="modal-dialog modal-lg">
             <div class="modal-content" id="registrationModalContent">
@@ -177,9 +176,35 @@
             });
         });
     </script>
+
+    @await Html.PartialAsync("_LoginModal")
+    @await Html.PartialAsync("_RegisterModal")
     @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
+<script src="~/js/login.js" asp-append-version="true"></script>
+<script src="~/js/register.js" asp-append-version="true"></script>
+
+
+<script>
+    function switchModal(currentModalId, targetModalId) {
+      const currentModalEl = document.querySelector(currentModalId);
+      const targetModalEl = document.querySelector(targetModalId);
+
+      // Hide the current modal
+      const currentModal = bootstrap.Modal.getInstance(currentModalEl);
+      if (currentModal) {
+        currentModal.hide();
+      }
+
+      // Show the target modal
+      const targetModal = new bootstrap.Modal(targetModalEl);
+      targetModal.show();
+    }
+</script>
+
+
+
 
 <style>
     /* Reset default margins/paddings */
