[FIX] pagination in genre

--- a/Readiculous.WebApp/Views/GenreMaster/GenreMasterScreen.cshtml
+++ b/Readiculous.WebApp/Views/GenreMaster/GenreMasterScreen.cshtml
@@ -102,6 +102,8 @@
             genreAddModalUrl: '@Url.Action("GenreAddModal", "GenreMaster")',
             genreEditModalUrl: '@Url.Action("GenreEditModal", "GenreMaster")',
             genreViewModalUrl: '@Url.Action("GenreViewPage", "GenreMaster")',
+            createGenreUrl: '@Url.Action("Create", "GenreMaster")',
+            editGenreUrl: '@Url.Action("Edit", "GenreMaster")',
             deleteGenreUrl: '@Url.Action("Delete", "GenreMaster")'
         };
     </script>
