[FIX] User Add Modal and added db to activity summary

--- a/Readiculous.WebApp/Views/BookMaster/BookEditModal.cshtml
+++ b/Readiculous.WebApp/Views/BookMaster/BookEditModal.cshtml
@@ -101,7 +101,7 @@
         <div class="mb-3">
             <label asp-for="CoverImage" class="form-label">Replace Cover Image</label>
             <label class="file-input-label">
-                <span>Click to upload or drag and drop</span>
+                <span>Click to upload</span>
                 <input asp-for="CoverImage" type="file" class="d-none" accept="image/*" />
             </label>
             <div class="image-preview-container mt-2 d-none" id="imagePreviewContainer">
