--- a/Readiculous.WebApp/Views/UserMaster/UserViewModal.cshtml
+++ b/Readiculous.WebApp/Views/UserMaster/UserViewModal.cshtml
@@ -64,6 +64,7 @@
                     <dt>Last Modified On</dt>
                     <dd>@Html.DisplayFor(model => model.UpdatedTime)</dd>
                 </div>
+     
             </dl>
         </div>
 
@@ -72,18 +73,26 @@
             <h5 class="user-view-meta-title">Activity Summary</h5>
             <div class="user-view-activity-stats">
                 <div class="activity-stat">
-                    <div class="stat-value">42</div>
+
+                    <div class="stat-value">@Model.UserReviewModels.Count</div>
                     <div class="stat-label">Reviews Written</div>
                 </div>
                 <div class="activity-stat">
-                    <div class="stat-value">18</div>
+                    <div class="stat-value">@Model.FavoriteBookModels.Count</div>
                     <div class="stat-label">Book Favorites</div>
                 </div>
                 <div class="activity-stat">
-                    <div class="stat-value">4.2</div>
+                    <div class="stat-value">
+                        @(Model.UserReviewModels.Any()
+                                                ? Model.UserReviewModels.Average(u => u.Rating).ToString("F2")
+                                                : "0.00")
+                    </div>
                     <div class="stat-label">Avg Rating</div>
                 </div>
+
+
                 <div class="activity-stat">
+            
                     <div class="stat-value">Fantasy</div>
                     <div class="stat-label">Top Genre</div>
                 </div>
