--- a/Readiculous.WebApp/Views/BookMaster/BookEditModal.cshtml
+++ b/Readiculous.WebApp/Views/BookMaster/BookEditModal.cshtml
@@ -7,7 +7,9 @@
     <div class="modal-body">
         <input type="hidden" asp-for="BookId" />
         <input type="hidden" asp-for="CreatedBy" />
+        <input type="hidden" asp-for="CreatedTime" />
         <input type="hidden" asp-for="UpdatedBy" />
+        <input type="hidden" asp-for="UpdatedTime" />
 
         <div asp-validation-summary="ModelOnly" class="text-danger"></div>
 
