--- a/Readiculous.WebApp/Views/UserMaster/UserEditModal.cshtml
+++ b/Readiculous.WebApp/Views/UserMaster/UserEditModal.cshtml
@@ -18,19 +18,19 @@
 
     <div class="form-group">
         <label asp-for="Email" class="form-label">Email</label>
-        <input asp-for="Email" class="form-control" readonly />
+        <input asp-for="Email" class="form-control input-greyed-out" readonly />
         <span asp-validation-for="Email" class="text-danger"></span>
     </div>
 
     <div class="form-group">
         <label asp-for="Password" class="form-label">New Password</label>
-        <div class="password-input-group">
-            <input asp-for="Password"
-                   class="form-control"
-                   type="password"
-                   autocomplete="new-password"
-                   placeholder="Leave blank to keep current password"
-                   id="editPassword" />
+            <div class="password-input-group">
+                <input asp-for="Password"
+                       class="form-control input-subtle"
+                       type="password"
+                       autocomplete="new-password"
+                       placeholder="Leave blank to keep current password"
+                       id="editPassword" />
             <button type="button"
                     class="password-toggle"
                     onclick="togglePassword('editPassword', this)"
