--- a/Readiculous.WebApp/Views/GenreMaster/GenreMasterScreen.cshtml
+++ b/Readiculous.WebApp/Views/GenreMaster/GenreMasterScreen.cshtml
@@ -3,6 +3,7 @@
 
 @section Styles {
     <link rel="stylesheet" href="~/css/adminGenreMaster/genre-master.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/css/adminGenreMaster/genre-master-modal.css" asp-append-version="true" />
 }
 
 @{
